# engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deps.yml  meson.build
cmake/: TargetMacros.cmake  msvc.cmake
depends/: meson.build
docs/: index.md  linux-quickstart.md  notes.md  windows-quickstart.md
project/: CMakeLists.txt  Engine.hh.in  meson.build
project/core/: CMakeLists.txt  meson.build
project/core/id/: CMakeLists.txt  ClassId.cc  ClassId.hh  HashIdClass.hh  IdClass.hh  SequentialIdGenerator.hh  meson.build
project/core/id/benchmark/: ClassId.cc  HashIdClass.cc  meson.build
project/core/id/test/: ClassId.cc  HashIdClass.cc  IdClass.cc  SequentialIdGenerator.cc  meson.build
project/core/memory/: ByteBuffer.hh  CMakeLists.txt  meson.build
project/core/memory/benchmark/: ByteBuffer.cc  meson.build
project/core/memory/test/: ByteBuffer.cc  meson.build
project/core/utils/: CMakeLists.txt  Exception.hh  String.cc  String.hh  TypeCast.hh  meson.build
project/core/utils/benchmark/: String.cc  meson.build
project/core/utils/test/: Exception.cc  String.cc  glm.cc  meson.build
project/editor/: CMakeLists.txt
project/glfw/: CMakeLists.txt  WindowManager.cc  WindowManager.hh  api.cc  api.hh  meson.build
project/glfw/examples/: CMakeLists.txt
project/glfw/examples/openwindow/: CMakeLists.txt  main.cc
project/window/: CMakeLists.txt  WindowManager.hh  meson.build
subprojects/: glfw.wrap  glm.wrap
subprojects/glad/: meson.build
tools/: bootstrap.ps1  bootstrap.sh
