#
# (c) LetsMakeGames 2019
# http://www.letsmake.games
#

project('mesontest', 'cpp', license: 'MIT')

PROJECT_NAME = 'mesontest'
PROJECT_MAJOR = 1
PROJECT_MINOR = 0
PROJECT_PATCH = 0
PROJECT_VERSION = '@0@.@1@.@2@'.format(PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH)

#
# Dependencies ################################################################
#

subdir('depends')

ENGINE_INCLUDES = include_directories(['project'])

#
# Subdirectories ##############################################################
#

subdir('project')
